2011-06-05  Bruno Haible  <bruno@clisp.org>

	setenv: Avoid gcc warning.
	* lib/setenv.c (setenv): Provide declaration if system lacks it.

2011-06-05  Bruno Haible  <bruno@clisp.org>

	sys_select: Ensure memset is declared also on AIX 7.
	* lib/sys_select.in.h: Include <string.h> also on AIX.
	* doc/posix-headers/sys_select.texi: Mention that <sys/select.h> is not
	self-contained also on AIX 7.1.

2011-06-04  Bruno Haible  <bruno@clisp.org>

	setlocale: Enable replacement on Cygwin 1.5.
	* m4/setlocale.m4 (gl_FUNC_SETLOCALE): Set REPLACE_SETLOCALE also on
	Cygwin 1.5.x.
	* doc/posix-functions/setlocale.texi: Mention that the problem with the
	LC_CTYPE category also exists on Cygwin 1.5.x.

2011-06-03  Bruno Haible  <bruno@clisp.org>

	Copyright: Use LGPL 2.1 instead of LGPL 2.0.
	* lib/localename.h: Update copyright header.
	* lib/localename.c: Likewise.
	* lib/relocatable.h: Likewise.
	* lib/relocatable.c: Likewise.

2011-06-02  Bruno Haible  <bruno@clisp.org>

	doc: Fix a module name.
	* doc/posix-functions/open.texi: Fix module name 'nonblocking'.

2011-06-02  Bruno Haible  <bruno@clisp.org>

	pipe2: Remove dependency on 'nonblocking' module.
	* lib/pipe2.c: Include verify.h. Include nonblocking.h only if
	O_NONBLOCK is defined by gnulib.
	(pipe2) [WIN32]: If O_NONBLOCK is not defined by gnulib, verify that it
	is zero.
	* modules/pipe2 (Depends-on): Add verify. Remove nonblocking.
	* tests/test-pipe2.c: Include nonblocking.h only if O_NONBLOCK is
	defined by gnulib.
	(get_nonblocking_flag): New function.
	(main): Test O_NONBLOCK flag only if it is nonzero.
	* doc/glibc-functions/pipe2.texi: Mention the 'nonblocking' module.

2011-05-31  Bruno Haible  <bruno@clisp.org>

	Fix link errors in tests: openat-die uses gettext-h.
	* modules/areadlinkat-tests (Makefile.am): Link test-areadlinkat
	against $(LIBINTL).
	* modules/dirent-safer-tests (Makefile.am): Link test-dirent-safer
	against $(LIBINTL).